--- a/hugo.yaml
+++ b/hugo.yaml
@@ -1,4 +1,4 @@
-baseurl: https://example.com/
+baseurl: https://neoddk.github.io/
 languageCode: en-us
 theme: hugo-theme-stack
 title: Example Site
